[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Objects/Doors/MetalDoor/metaldoor.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/Doors/LockedDoor/LockedDoor.gd" type="Script" id=3]
[ext_resource path="res://src/Game/assets/audio/explosion.mp3" type="AudioStream" id=4]
[ext_resource path="res://src/Game/assets/audio/c4.mp3" type="AudioStream" id=5]
[ext_resource path="res://src/Equipment/c4.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 128 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72, 128 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 192, 128 )

[node name="LockedDoor" type="StaticBody2D"]
z_index = 5
collision_layer = 20480
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -128 )
texture = ExtResource( 2 )
offset = Vector2( 0.179699, 128.193 )

[node name="Door_collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="C4" type="Sprite" parent="."]
position = Vector2( 0, -128 )
texture = ExtResource( 6 )
offset = Vector2( 0.179699, 128.193 )

[node name="C4_noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 1000.0

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 1000.0

[node name="C4_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["interactable"]]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
shape = SubResource( 2 )

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = -312.0
margin_right = 112.0
margin_bottom = -145.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 187.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "Door"
align = 1
autowrap = true

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 50.0
margin_right = 210.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 4 )
text = "Hold [F] to Open (requires item_needed)"
align = 1
autowrap = true

[node name="Action2" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 103.0
margin_right = 210.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 4 )
text = "Hold [X] to use C4"
align = 1

[node name="Action3" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 130.0
margin_right = 210.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 4 )
text = "Hold [C] to use ECM"
align = 1

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 157.0
margin_right = 210.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 5 )
step = 1.0
rounded = true

[node name="NPC_open" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC_open"]
shape = SubResource( 6 )

[connection signal="timeout" from="C4_timer" to="." method="_on_C4_timer_timeout"]
[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
[connection signal="area_entered" from="NPC_open" to="." method="_on_NPC_open_area_entered"]
